--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 :root {
   --clr-stone-100: hsl(30, 54%, 90%);
   --clr-stone-150: hsl(30, 18%, 87%);
@@ -17,95 +11,165 @@
 }
 
 body {
-  margin: 0 auto;
-  font-size: 16px;
+  display: grid;
+  place-content: center;
+
+  /* font-size: 16px; */
   font-family: 'Outfit', serif;
   color: var(--clr-stone-600);
+
+  background: var(--clr-stone-100);
+
+}
+
+.recipe-page {
+  max-width: 46rem;
+  padding-inline: 0;
+  padding-block: 0 1.75rem;
+
+  background: white;
+
+  border-radius: 1.5rem;
 }
 
 img {
   max-width: 100%;
 }
 
-h1,
-h2 {
+.recipe-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+  gap: 2.5rem;
+
+  /* padding-inline: 2.5rem; */
+
+  margin-top: 2.5rem;
+}
+
+.title h1 {
+  margin-bottom: 1.5rem;
+
   font-family: 'Young Serif', serif;
   font-weight: 400;
+  font-size: 2.5rem;
+  line-height: 100%;
+  color: var(--clr-stone-900);
 }
 
-hr {
-  opacity: 10%;
-}
-
-li::marker {
-  color: var(--clr-rose-800);
-}
-
-ol {
-  font-family: 'Outfit', serif;
-}
-
-li p {
-  margin-left: 1rem;
-}
-
-h2 {
-  color: var(--clr-brown-800);
-}
-
-.recipe {
-  max-width: 80%;
-  margin: 0 auto;
-}
-
-.flex {
-  display: flex;
+.title p {
+  line-height: 150%;
+  color: var(--clr-stone-600);
 }
 
 .preparation {
+  display: flex;
+  flex-direction: column;
+  /* align-items: flex-start; */
+
+  gap: 1rem;
+  padding: 1.5rem;
+
+  width: 100%;
+
   background-color: var(--clr-rose-50);
-  padding: 0.25rem;
-  border-radius: 1rem;
+
+  border-radius: 0.75rem;
 }
 
 .preparation_title {
+  font-weight: 600;
+  font-size: 1.25rem;
+  line-height: 100%;
   color: var(--clr-rose-800);
-  font-weight: 600;
-  font-size: 18px;
-  margin-left: 1.5rem;
 }
 
-.nutritional {
-  margin-left: 2rem;
-  width: 40%;
+
+
+.list {
+  padding-left: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.value {
-  width: 50%;
-  margin-left: 2rem;
+.list-item {
+  padding-left: 1rem;
+}
+
+.preparation ul li::marker {
+  font-weight: 700;
+  color: var(--clr-rose-800);
+}
+
+.ingredients ul li::marker {
+  font-weight: 700;
   color: var(--clr-brown-800);
-  font-weight: 600;
 }
 
-.nutrition {
-  margin-bottom: 1rem;
+.instruction::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--clr-stone-150);
+  display: inline-block;
+  margin-bottom: 1.875rem;
+}
+.instruction::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--clr-stone-150);
+  display: inline-block;
+  margin-top: 2.5rem;
 }
 
-@media (min-width: 600px) {
+.heading-brown {
+  font-family: "Young Serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.75rem;
+  line-height: 100%;
+  color: var(--clr-brown-800);
+  margin-bottom: 1.5rem;
+}
+
+table {
+  width: 100%;
+  margin-top: 0.75rem;
+
+  border-collapse: collapse;
+}
+
+td {
+  padding-left: 2rem;
+}
+
+tr:not(:last-child) {
+  border-bottom: 1px solid var(--clr-stone-150);
+}
+
+td {
+  padding-block: 0.75rem;
+}
+
+.qty {
+  font-weight: 700;
+  color: var(--clr-brown-800);
+}
+
+@media screen and (min-width: 37.5rem) {
+  body {
+    padding: 2rem 1rem;
+  }
+
   img {
-    border-radius: 1rem;
+    border-radius: 1.5rem;
   }
 
   .recipe-page {
-    background-color: var(--clr-stone-100);
-    padding: 2rem;
-  }
-
-  .container {
-    margin: 0 auto;
-    background-color: white;
-    border-radius: 1rem;
-    max-width: 800px;
-    padding: 1rem;
+    padding-inline: 2.5rem;
+    padding-block: 1.75rem;
   }
 }
